Test/crash_logs/crash_log_ValueError_2023-10-13_23-19-20.txt
Error Type: ValueError
System Information:
System: Windows
Node: DESKTOP-4HHR1F9
Release: 10
Version: 10.0.22621
Machine: AMD64
Processor: AMD64 Family 23 Model 24 Stepping 1, AuthenticAMD
Total RAM: 6323187712 bytes
Available RAM: 626380800 bytes
RAM Usage: 90.1%


Exception Information:
Traceback (most recent call last):
  File "D:\Hackathon\Test\fatal.py", line 66, in generate_random_errors
    int("string")
ValueError: invalid literal for int() with base 10: 'string'
